TextEditor - Prevent custom buttons overlapping in ie11 (T879885) (#12795)

--- a/styles/widgets/common/textEditor.less
+++ b/styles/widgets/common/textEditor.less
@@ -11,6 +11,7 @@
 .dx-editor-content-wrapper() {
     display: flex;
     flex-grow: 1;
+    width: 0;
     position: relative;
     align-items: baseline;
 }
